--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="js/controllers/mainCtrl.js"></script>
     <script src="js/controllers/battleCtrl.js"></script>
     <script src="js/controllers/battleTurnCtrl.js"></script>
+    <script src="js/controllers/battleInitiativeCtrl.js"></script>
     <script src="js/controllers/battleFireCtrl.js"></script>
     <script src="js/controllers/battleMeleeCtrl.js"></script>
     <script src="js/controllers/battleMoraleCtrl.js"></script>
