input spinner and dice directives

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,8 @@
     <script src="js/controllers/battleMeleeCtrl.js"></script>
     <script src="js/controllers/battleMoraleCtrl.js"></script>
     <script src="js/directives/directives.module.js"></script>
+    <script src="js/directives/input-spin.js"></script>
+    <script src="js/directives/dice.js"></script>
     <script src="js/services/services.module.js"></script>
     <script src="js/services/media.js"></script>
     <script src="js/services/sound.js"></script>
