--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script src="js/controllers/battleMeleeCtrl.js"></script>
     <script src="js/controllers/battleMoraleCtrl.js"></script>
     <script src="js/controllers/battleArmyMoraleCtrl.js"></script>
+    <script src="js/controllers/battleVictoryCtrl.js"></script>
     <script src="js/directives/directives.module.js"></script>
     <script src="js/directives/input-spin.js"></script>
     <script src="js/directives/dice.js"></script>
